fixed map on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,7 @@ span {
 }
 
 #mapDiv {
+    overflow: scroll;
     height: 400px;
     width: 100%;
     padding-bottom: 8%;
